<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".LoginActivity">

    <LinearLayout
        android:id="@+id/authLayout"
        android:layout_width="360dp"
        android:layout_height="234dp"
        android:backgroundTint="@color/OTRO"
        android:backgroundTintMode="src_in"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.893">

        <EditText
            android:id="@+id/txtEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:foregroundTint="@color/black"
            android:hint="@string/e_mail"
            android:inputType="textEmailAddress"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <EditText
            android:id="@+id/txtPaswwd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/white"
            android:ems="10"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:textColor="@color/white"
            android:textColorHint="@color/white" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button

                android:id="@+id/btnRegistrar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_dark"
                android:text="@string/registrar"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="wrap_content"
                android:layout_height="10dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:backgroundTint="@color/blue_dark"
                android:text="@string/login"
                android:textColor="@color/white" />

        </LinearLayout>

        <Button
            android:id="@+id/btnLoginGoogle"
            android:layout_width="344dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/teal_200"
            android:text="@string/iniciar_sesion_con_google"
            android:textColor="@color/white"
            app:icon="@drawable/googleg_standard_color_18"
            app:iconGravity="end"
            app:iconTint="@android:color/white" />

    </LinearLayout>
    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/entra_en_la_app_de_cantavieja"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:drawableTintMode="screen"
        app:layout_constraintBottom_toTopOf="@+id/authLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.067" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"


        android:text="@string/bienvenid"
        android:textColor="@color/white"
        android:textSize="24dp"
        android:textStyle="bold"
        app:drawableTintMode="screen"
        app:layout_constraintBottom_toTopOf="@+id/authLayout"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.03" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="381dp"
        android:layout_height="282dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="22dp"
        app:layout_constraintBottom_toTopOf="@+id/authLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:srcCompat="@drawable/cinco" />

</androidx.constraintlayout.widget.ConstraintLayout>